# http-server-static

./: README.md
docs/: docs.txt  http-server C app.pptx  http-server-flow.drawio  presentation.pptx
software/: CMakeLists.txt  main.c  utils.c  utils.h
software/lib/: file_helper.c  file_helper.h  http_helper.c  http_helper.h
software/src/: index.html
